--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, user-scalable=no">
         <meta charset="utf-8">
         <meta name="HandheldFriendly" content="True">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
         <link rel="apple-touch-icon-precomposed" href="images/TangerineIcon.png" />
 
         <link rel="stylesheet" href="css/tangerine.css">
@@ -25,6 +25,7 @@
             <div id="watermark"><img src="images/tangerine_logo_89.png"></div>
         </div>
 
+        <script src="cordova.js"></script>
         <script src="js/lib.js"></script>
         <script src="js/app.js"></script>
     </body>
